# LangChain

./: .gitignore  README.md  pyproject.toml
Chapter1/: 1_ChatOpenAI.py  2_InitChatModel.py  3_Messages.py  4_Prompts1.py  5_Prompts2.py  6_Structured_Output.py
Chapter2/: 1_FirstChain.py  2_Runnable.py  3_CustomRunnable.py  4_ParallelChains.py  5_ConditonalChains.py
Chapter3/: 1_ReActAgent.py  2_ReAct_DBAgent.py
core/: __init__.py  config.py  deps.py
database/: __init__.py  db.py
llms/: __init__.py  factor.py
model/: __init__.py  schemas.py
models/: __init__.py  schemas.py
